# AIgnostic

./: .dockerignore  .gitignore  =3.12  README.md  aignostic.py  babel.config.js  codecov.yml  commitlint.config.js  conftest.py  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.mocks.yml  docker-compose.yml  index.html  jest.config.ts  nx.json  package-lock.json  package.json  prod.docker-compose.yml  pyproject.toml  q  run_all_lint.sh  run_all_tests.sh
.github/workflows/: ci.yml  docker.yml  nx-run.yml
aggregator/: project.json  pyproject.toml
aggregator/tests/: test_hello.py
aignostic/: Dockerfile  Dockerfile.dev  local_api.py  main.py  output.txt  project.json  pyproject.toml  scikit_model.sav  test_consumer.py  test_log.txt  test_producer.py  test_rabbit.py
aignostic/aignostic/: __init__.py  hello.py  mock_server.py  test_dataset_api.py
aignostic/aignostic/dataset/: validate_dataset_api.py
aignostic/aignostic/dataset_loader/: loader.py
aignostic/aignostic/metrics/: metrics.py  utils.py
aignostic/aignostic/model/: hugging-face-regressor.ipynb  hugging-face-regressor.py  load_huggingface_test.py  mock.py  model-API-docs.md  scikit_mock.py  train_scikit_model.py
aignostic/aignostic/pydantic_models/: data_models.py  job.py  metric_models.py  models.py  utils.py
aignostic/aignostic/router/: aggregator.py  api.py  connection_constants.py  worker.py
aignostic/frontend/: jest.config.ts  project.json  webpack.config.js
aignostic/frontend/src/app/: app.spec.tsx  app.tsx  home.tsx  utils.ts
aignostic/tests/: test_hello.py  test_metrics.py  utils.py
aignostic/tests/app/integration/: test_api_keys_intgr.py
aignostic/tests/datasetAPI/: constants.py
aignostic/tests/datasetAPI/unit/: mock_server.py  test_dataset_api.py
aignostic/tests/dataset_api/: constants.py
aignostic/tests/dataset_api/unit/: mock_server.py  test_dataset_api.py
aignostic/tests/dataset_endpoint/: test_dataset_api.py
aignostic/tests/integration/: test_api_keys_intgr.py  test_dataset_fetching_intgr.py
aignostic/tests/modelAPI/dataset/: mock_dataset.py  test.csv  test.json
aignostic/tests/modelAPI/model/: huggingface_binclassifier.py  mock.py  scikit_mock.py  train_scikit_model.py
aignostic/tests/modelAPI/unit/: test.py  test_dataset.py  test_model_api.py  test_pydantic_conversions.py  test_server.py  test_types.py
aignostic/tests/model_api/model/: huggingface_binclassifier.py  mock.py  scikit_mock.py  train_scikit_model.py
aignostic/tests/model_api/unit/: test_model_api.py  test_pydantic_conversions.py
aignostic/tests/test_log/: test_log.txt
aignostic/tests/unit/: test_jobs.py
aignostic/tests/unit/app/: test_api_keys_unit.py  test_model_output_check.py
aignostic/tests/unit/app/unit/: test_api_keys_unit.py  test_metrics.py  test_model_output_check.py
aignostic/tests/unit/dataset_endpoint/: test_dataset_api.py
aignostic/tests/unit/metrics/: test_metric_utils.py  test_metrics.py
aignostic/tests/unit/model_endpoint/: test_model_api.py  test_pydantic_conversions.py
aignostic/tests/utils/: api_utils.py
aignostic/tests/utils/dataset/: mock_server.py
aignostic/tests/utils/model/: finbert.py  hf_utils.py  huggingface_binclassifier.py  mock.py  scikit_mock.py  train_scikit_model.py
assets/: index-9Y7BFTZA.js  index-A38ohECP.js  index-AzFb9dgv.js  index-B3Q--Hep.js  index-B5F_GQJE.js  index-B7PYh_GZ.js  index-BFq3rYum.js  index-BG_ZbTNW.css  index-BKmRYPvK.js  index-BXwCox_Y.js  index-BZoScy0w.js  index-BekMZs7q.js  index-Bgso5X4E.js  index-Bqs13A8o.js  index-ByOB4XN7.js  index-C1c1oWnS.js  index-C2KIHK3k.js  index-C2jZw9AO.js  index-CANZoOdH.js  index-CIZ2v0lT.js  index-CQHV2yiC.js  index-CVYDyZcP.js  index-CXfS567_.js  index-CdqWKIIh.js  index-CfN9_Z1X.js  index-CtHBDX_V.js  index-D1ha5zuo.js  index-D1nFqJrE.js  index-D29zNB7w.js  index-D79HPIhC.js  index-D9T_bQ_e.js  index-DFl1V_eh.js  index-DGbU73nY.js  index-DLOpCAXT.js  index-DOOtuCQ7.js  index-DV2Uqhk_.js  index-D_jM4sgf.js  index-DcneWEWg.js  index-Ddu_YwB4.js  index-De9mGZo5.js  (+25 more)
common/: project.json
dockerfiles/: Dockerfile.frontend  Dockerfile.frontend.dev  Dockerfile.python  Dockerfile.python.dev  Dockerfile.python.dev.uber  Dockerfile.python.usermetrics  build.python.sh  prod.nginx.conf  push.python.sh
frontend/: Dockerfile  jest.config.ts  project.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  vite.config.ts
frontend-e2e/: project.json
frontend/src/app/: api_docs.tsx  app.tsx  constants.ts  constants.tsx  dropdown.tsx  home.spec.tsx  home.styles.tsx  home.tsx  nx-welcome.tsx  styles.tsx  theme.tsx  types.ts  utils.ts
frontend/src/app/components/: CodeBox.tsx  ErrorMessage.tsx  dropdown.tsx  title.tsx
frontend/src/app/docs/: data_api.md  model_api.md
frontend/src/test/: utils.test.ts
frontend/tests/: apidocs.test.tsx  home.test.tsx  utils.test.tsx
metrics/: project.json  pyproject.toml
models/: project.json  pyproject.toml
models/models/: hello.py
models/tests/: test_hello.py
scripts/: free_up_space_gha.sh  install_all.sh  load_wiki_dataset.sh  start_dispatcher.sh
swarm/: app.docker-compose.yml  mocks.docker-compose.yml  services.docker-compose.yml
swarm/nginx/: prod.nginx.conf
worker/: project.json
