[tool.nx]
autoActivate = true

[tool.poetry]
name = "@aignostic/source"
version = "1.0.0"
description = ""
authors = []
license = "Proprietary"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
folktables = "^0.0.12"
pydantic = "^2.10.6"
numpy = "^2.2.3"


[tool.poetry.dependencies.api]
path = "packages/api"
develop = true

[tool.poetry.dependencies.common]
path = "packages/common"
develop = true

[tool.poetry.dependencies.metrics]
path = "packages/metrics"
develop = true

[tool.poetry.dependencies.worker]
path = "packages/worker"
develop = true

[tool.poetry.dependencies.aggregator]
path = "packages/aggregator"
develop = true

[tool.poetry.dependencies.mocks]
path = "packages/mocks"
develop = true

[tool.poetry.dependencies.report-generation]
path = "packages/report-generation"
develop = true

[tool.poetry.dependencies.llm-insights]
path = "packages/llm-insights"
develop = true

[tool.poetry.dependencies.dispatcher]
path = "packages/dispatcher"
develop = true

[tool.poetry.group.dev.dependencies]
flake8 = "7.1.1"
autopep8 = "2.3.1"
pytest = "8.3.4"
pytest-sugar = "1.0.0"
pytest-cov = "6.0.0"
pytest-html = "4.1.1"
pytest-httpserver = "^1.1.0"
httpx = "^0.28.1"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
